tests/miz/pass/types/pass_types_mode_alias_001.miz
definition
  mode SmallSet is set;
end;

definition
  let X be SmallSet;
  theorem
    X = X;
  proof
  end;
end;
