tests/miz/fail/types/fail_types_unknown_mode_001.miz
definition
  let X be UnknownMode;
  theorem
    X = X;
  proof
  end;
end;
